@@ -1,3 +1,7 @@
+2008-06-04  Satoshi Nakagawa <psychs@limechat.net>
+
+	Added "first" attribute for span.sender to show nicknames in the first line only.
+
 2008-06-03  Satoshi Nakagawa <psychs@limechat.net>
 
 	Changed to ignore CTCP replies with empty commands.
